Update changelog with missing 8.1.0, 8.2.0, 8.2.1, 8.2.2, 8.2.3, 8.2.4 sections and add 9.x changelog

--- a/Odata-docs/TOC.yml
+++ b/Odata-docs/TOC.yml
@@ -518,6 +518,8 @@
       href: /odata/resources/roadmap
 - name: Changelog
   items:
+    - name: OData lib (9.x) changes
+      href: /odata/changelog/odatalib-9x
     - name: OData lib (8.x) changes
       href: /odata/changelog/odatalib-8x
     - name: OData lib (7.x) changes
